fix product images position on small screen

--- a/src/components/ProductPage/page.module.scss
+++ b/src/components/ProductPage/page.module.scss
@@ -111,6 +111,7 @@
 
 .images {
   display: flex;
+  justify-content: center;
   gap: 8px;
 
   &__button {
